# agent-uac

./: .gitignore  AGENTS.md  README.md  build-portable.ps1  design_system.md  package-lock.json  package.json  tdd-guide.md
src/: config.ts  index.ts  mcp-server.ts  notes.ts  planner.ts  schema.ts  secrets.ts  skills.ts  sync.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/adapters/: antigravity.ts  base.ts  claude.ts  codex.ts  gemini.ts  index.ts  vscode.ts
src/api/: server.ts
src/importers/: mcpRouter.ts  snippet.ts
src/utils/: fs.ts  json.ts
web/: index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx  styles.css
