[package]
name = "agent-uac-desktop"
version = "0.1.0"
description = "Agent UAC desktop shell"
authors = ["agent-uac"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
